--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,6 @@ compatibility_date = "2025-11-29"
 
 workers_dev = true
 
-"routes": [
-    {
-    "pattern": "warpstar.scamjam.app",
-    "custom_domain": true
-    }
-]
+[[routes]]
+pattern = "warpstar.scamjam.app"
+custom_domain = true
