--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,19 @@ workers_dev = true
 [[routes]]
 pattern = "warpstar.scamjam.app"
 custom_domain = true
+
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
